fix(component: post): iframe and headings overflow

--- a/src/css/Post.module.css
+++ b/src/css/Post.module.css
@@ -35,7 +35,7 @@
   scroll-margin-top: 40px;
   padding: 4px 12px;
   border-radius: 6px;
-  width: max-content;
+  width: fit-content;
   line-height: 1.6;
 }
 
@@ -134,4 +134,10 @@
 
 .singlePost pre {
   overflow-x: auto;
+}
+
+.singlePost iframe {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 16 / 9;
 }
